added a master_df.py and master_df.csv

--- a/templates/index.html
+++ b/templates/index.html
@@ -20,6 +20,7 @@
             Month:
         </label>
         <select id = "months" name = "months">
+            <option value="none">None</option>
             <option value="january">Jan</option>
             <option value="february">Feb</option>
             <option value="march">Mar</option>
