--- a/templates/index.html
+++ b/templates/index.html
@@ -7,43 +7,46 @@
 {% block body %}
 <hr>
     <form action = "/" method = "POST">
-        <label for = "years">
+        <label for = "country">
+            country:
+        </label>
+        <select id = "country" name = "country">
+            {% for country in countries %}
+            <option value= {{country}}>{{country}}</option>
+            {% endfor %}
+        </select>
+
+        <label for = "year">
             Year:
         </label>
-        <select id = "years" name = "years">
-            <option value="2017">2017</option>
-            <option value="2018">2018</option>
-            <option value="2019">2019</option>
-            <option value="2020">2020</option>
+        <select id = "year" name = "year">
+            {% for year in years %}
+            <option value= {{year}}>{{year}}</option>
+            {% endfor %}
         </select>
-         <label for = "months">
+
+         <label for = "month">
             Month:
         </label>
-        <select id = "months" name = "months">
-            <option value="none">None</option>
-            <option value="january">Jan</option>
-            <option value="february">Feb</option>
-            <option value="march">Mar</option>
-            <option value="april">Apr</option>
-            <option value="may">May</option>
-            <option value="june">Jun</option>
-            <option value="july">Jul</option>
-            <option value="august">Aug</option>
-            <option value="september">Sep</option>
-            <option value="october">Oct</option>
-            <option value="november">Nov</option>
-            <option value="december">Dec</option>
+        <select id = "month" name = "month" >
+            {% for month in months %}
+            <option value= {{month}}>{{month}}</option>
+            {% endfor %}
         </select>
          <label for = "visa_type">
             Visa_type:
         </label>
         <select id = "visa_type" name = "visa_type">
-            <option value="B1">B1</option>
-            <option value="B2">B2</option>
-            <option value="F1">F1</option>
+            {% for visa_type in visa_types %}
+            <option value= {{visa_type}}>{{visa_type}}</option>
+            {% endfor %}
         </select>
         <input type = "submit" value = "Filter" >
     </form>
 
+{% if returned_visa_type %}
+<p> Showing results for {{returned_country }} {{returned_visa_type}} {{returned_month}} {{returned_year}}</p>
+
+{% endif %}
 
 {% endblock %}
