--- a/templates/update.html
+++ b/templates/update.html
@@ -1,18 +1,56 @@
 {% extends 'base.html' %}
 
 {% block head %}
-<title> Task Master</title>
+<title> <h2> Visa Statistics </h2> </title>
 {% endblock %}
 
 {% block body %}
-<div class = 'content'>
-    <h1> Update Task </h1>
-    <div class = 'form'>
-        <p> </p>
-        <form action = "/update/{{task.id}}" method = "POST">
-            <input type = "text" name = "content" id = "content" value = {{task.content}}>
-            <input type = "submit" value = "Update" >
-        </form>
-    </div>
-</div>
+<hr>
+    <form action = "/" method = "POST">
+        <label for = "country">
+            country:
+        </label>
+        <select id = "country" name = "country" >
+            {% for country in countries %}
+            {% if country == returned_country %}
+            <option value= {{country}} selected>{{country}}</option>
+            {% else %}
+            <option value= {{country}} >{{country}}</option>
+            {% endif %}
+            {% endfor %}
+        </select>
+
+        <label for = "year">
+            Year:
+        </label>
+        <select id = "year" name = "year">
+            {% for year in years %}
+            <option value= {{year}}>{{year}}</option>
+            {% endfor %}
+        </select>
+
+         <label for = "month">
+            Month:
+        </label>
+        <select id = "month" name = "month" >
+            {% for month in months %}
+            <option value= {{month}}>{{month}}</option>
+            {% endfor %}
+        </select>
+         <label for = "visa_type">
+            Visa_type:
+        </label>
+        <select id = "visa_type" name = "visa_type">
+            {% for visa_type in visa_types %}
+            <option value= {{visa_type}}>{{visa_type}}</option>
+            {% endfor %}
+        </select>
+        <input type = "submit" value = "Filter" >
+    </form>
+
+{% if returned_visa_type %}
+<p> Showing results for {{returned_country }} {{returned_visa_type}} {{returned_month}} {{returned_year}}</p>
+
+{% endif %}
+
 {% endblock %}
