--- a/templates/index.html
+++ b/templates/index.html
@@ -45,7 +45,8 @@
     </form>
 
 {% if returned_visa_type %}
-<p> Showing results for {{returned_country }} {{returned_visa_type}} {{returned_month}} {{returned_year}}</p>
+<p> Showing results for {{returned_country }} {{returned_visa_type}} {{returned_month}} {{returned_year}} </p>
+<p> {{result}} </p>
 
 {% endif %}
 
