added link to visa symbol descriptions pdf

--- a/templates/index.html
+++ b/templates/index.html
@@ -60,6 +60,13 @@
     </form>
 
 <hr>
+<div>
+    <p> For definitions of non immigrant visa classification symbols, please
+        <a href = "https://travel.state.gov/content/dam/visas/Statistics/Non-Immigrant-Statistics/MonthlyNIVIssuances/Nonimmigrant%20Visa%20Symbols.pdf" target = "_blank">
+            click here
+        </a>
+    </p>
+</div>
 {% if returned_visa_type %}
     {% for table in tables %}
             {{titles[loop.index]}}
