added github repo link

--- a/templates/index.html
+++ b/templates/index.html
@@ -56,7 +56,7 @@
             <option value= {{visa_type}}>{{visa_type}}</option>
             {% endfor %}
         </select>
-        <input type = "submit" value = "Filter" >
+        <input type = "submit" value = "Go" >
     </form>
 
 <hr>
@@ -64,6 +64,11 @@
     <p> For definitions of non immigrant visa classification symbols, please
         <a href = "https://travel.state.gov/content/dam/visas/Statistics/Non-Immigrant-Statistics/MonthlyNIVIssuances/Nonimmigrant%20Visa%20Symbols.pdf" target = "_blank">
             click here
+        </a>
+    </p>
+      <p>
+        <a href = "https://github.com/TashiNyangmi/Visa" target = "_blank">
+            Github Code Repo
         </a>
     </p>
 </div>
