--- a/templates/index.html
+++ b/templates/index.html
@@ -1,81 +1,69 @@
 {% extends 'base.html' %}
 
 {% block head %}
-<title> <h2> Visa Statistics </h2> </title>
-<hr>
+
 {% endblock %}
 
 {% block body %}
 <div>
-    <p> Data from <b> Mar-2017 to Nov-2020 </b></p>
-    <p> US Department of State has not released monthly data for Dec-2020 yet.</p>
-    <p> *This dataset is automatically updated every day</p>
-    <p> For definitions of non immigrant visa classification symbols, please
-        <a href = "https://travel.state.gov/content/dam/visas/Statistics/Non-Immigrant-Statistics/MonthlyNIVIssuances/Nonimmigrant%20Visa%20Symbols.pdf" target = "_blank">
-            click here
-        </a>
-    </p>
-      <p>
-        <a href = "https://github.com/TashiNyangmi/Visa" target = "_blank">
-            Github Code Repo
-        </a>
-    </p>
+<form action = "/" method = "POST">
+
+    <label for = "country">
+        Country:
+    </label>
+    <select id = "country" name = "country" class = 'input_filter'>
+        {% if returned_country %}
+        <option value = {{returned_country}}> {{returned_country}}</option>
+        {% endif %}
+        <option value = 'Nepal'> Nepal</option>
+        {% for country in countries %}
+        <option value= {{country}}>{{country}}</option>
+        {% endfor %}
+    </select>
+
+    <label for = "year">
+        Year:
+    </label>
+    <select id = "year" name = "year" class = "input_filter">
+        {% if returned_year %}
+        <option value = {{returned_year}}> {{returned_year}}</option>
+        {% endif %}
+        {% for year in years %}
+        <option value= {{year}}>{{year}}</option>
+        {% endfor %}
+    </select>
+
+     <label for = "month">
+        Month:
+    </label>
+    <select id = "month" name = "month" class = "input_filter">
+        {% if returned_month %}
+        <option value = {{returned_month}}> {{returned_month}}</option>
+        {% endif %}
+        {% for month in months %}
+        <option value= {{month}}>{{month}}</option>
+        {% endfor %}
+    </select>
+
+    <label for = "visa_type">
+        Visa_type:
+    </label>
+    <select id = "visa_type" name = "visa_type" class = "input_filter">
+        {% if returned_visa_type %}
+        <option value = {{returned_visa_type}}> {{returned_visa_type}}</option>
+        {% endif %}
+        <option value = 'all'> all </option>
+        {% for visa_type in visa_types %}
+        <option value= {{visa_type}}>{{visa_type}}</option>
+        {% endfor %}
+    </select>
+
+    <input type = "submit" value = "Go" class = submit>
+
+</form>
 </div>
 <hr>
-    <form action = "/" method = "POST">
-        <label for = "country">
-            country:
-        </label>
-        <select id = "country" name = "country" class = 'input_filter1'>
-            {% if returned_country %}
-            <option value = {{returned_country}}> {{returned_country}}</option>
-            {% endif %}
-            <option value = 'Nepal'> Nepal</option>
-            {% for country in countries %}
-            <option value= {{country}}>{{country}}</option>
-            {% endfor %}
-        </select>
 
-        <label for = "year">
-            Year:
-        </label>
-        <select id = "year" name = "year">
-            {% if returned_year %}
-            <option value = {{returned_year}}> {{returned_year}}</option>
-            {% endif %}
-            {% for year in years %}
-            <option value= {{year}}>{{year}}</option>
-            {% endfor %}
-        </select>
-
-         <label for = "month">
-            Month:
-        </label>
-        <select id = "month" name = "month" >
-            {% if returned_month %}
-            <option value = {{returned_month}}> {{returned_month}}</option>
-            {% endif %}
-            {% for month in months %}
-            <option value= {{month}}>{{month}}</option>
-            {% endfor %}
-        </select>
-
-         <label for = "visa_type">
-            Visa_type:
-        </label>
-        <select id = "visa_type" name = "visa_type">
-            {% if returned_visa_type %}
-            <option value = {{returned_visa_type}}> {{returned_visa_type}}</option>
-            {% endif %}
-            <option value = 'all'> all </option>
-            {% for visa_type in visa_types %}
-            <option value= {{visa_type}}>{{visa_type}}</option>
-            {% endfor %}
-        </select>
-        <input type = "submit" value = "Go" >
-    </form>
-
-<hr>
 
 {% if returned_visa_type %}
     {% for table in tables %}
