--- a/templates/base.html
+++ b/templates/base.html
@@ -14,10 +14,6 @@
     padding: 7px;
     }
 
-    .logo_image{
-    width:100px;
-    }
-
     .small_image{
     width: 120px;
     padding: 5px;
@@ -54,9 +50,16 @@
 
 <body>
     <div>
-        <p id = "tiny_p"> Data from <b> Mar-2017 to Nov-2020 </b> <br>
+        <p id = "tiny_p">
+             Source:
+        <a href = "https://travel.state.gov/content/travel/en/legal/visa-law0/visa-statistics/nonimmigrant-visa-statistics/monthly-nonimmigrant-visa-issuances.html" target = "_blank">
+           [LINK]
+        </a>
+        <br>
+        <br>
+        Data from <b> Mar-2017 to Nov-2020 </b> <br>
         US Department of State has not released monthly data for Dec-2020 yet. <br>
-        *This dataset used in this webapp is automatically updated<br>
+        This dataset used in this webapp is automatically updated<br>
         For definitions of non immigrant visa classification symbols, please
         <a href = "https://travel.state.gov/content/dam/visas/Statistics/Non-Immigrant-Statistics/MonthlyNIVIssuances/Nonimmigrant%20Visa%20Symbols.pdf" target = "_blank">
             click here
@@ -65,7 +68,7 @@
 
         <p>
             <a href = "https://github.com/TashiNyangmi/Visa" target = "_blank">
-                <img src = 'static\github_logo.png' class = "logo_image">
+                Github Code Repo
             </a>
         </p>
     </div>
