some changes to index.html

--- a/templates/index.html
+++ b/templates/index.html
@@ -6,6 +6,40 @@
 
 {% block body %}
 <div>
+    <p id = "tiny_p">
+             Source:
+        <a href = "https://travel.state.gov/content/travel/en/legal/visa-law0/visa-statistics/nonimmigrant-visa-statistics/monthly-nonimmigrant-visa-issuances.html" target = "_blank">
+           [LINK]
+        </a>
+        <br>
+        <br>
+
+        Data from <b> Mar-2017 to Dec-2020 </b> <br>
+        US Department of State has not released monthly data for
+        {% for month_year in download_list%}
+        {{month_year.title().replace('_', ' ')}}
+        {% endfor %}
+        yet. <br>
+        This webapp is automatically updated<br>
+        For definitions of non immigrant visa classification symbols, please
+        <a href = "https://travel.state.gov/content/dam/visas/Statistics/Non-Immigrant-Statistics/MonthlyNIVIssuances/Nonimmigrant%20Visa%20Symbols.pdf" target = "_blank">
+            click here
+        </a> <br>
+    </p>
+
+    <p>
+        <a href = "https://github.com/TashiNyangmi/Visa" target = "_blank">
+            Github Code Repo
+        </a>
+    </p>
+</div>
+
+    <hr>
+
+
+
+
+<div>
 <form action = "/" method = "POST">
 
     <label for = "country">
